// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for background: canvas, size: "small", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
  color: var(--p-color-canvas) !important;
}
::slotted(a:nth-child(1)[data-animating]), ::slotted(button:nth-child(1)[data-animating]) {
  transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color 0s linear var(--p-duration-md) !important;
}
::slotted(a:nth-child(1):not([data-animating])), ::slotted(button:nth-child(1):not([data-animating])) {
  background: var(--p-color-primary) !important;
}
@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
    transition: unset !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not(:nth-child(1)):hover), ::slotted(button:not(:nth-child(1)):hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-canvas);
  padding: var(--p-spacing-static-xs);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}
@media(forced-colors:active) {
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "medium", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-md) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
  color: var(--p-color-canvas) !important;
}
::slotted(a:nth-child(1)[data-animating]), ::slotted(button:nth-child(1)[data-animating]) {
  transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color 0s linear var(--p-duration-md) !important;
}
::slotted(a:nth-child(1):not([data-animating])), ::slotted(button:nth-child(1):not([data-animating])) {
  background: var(--p-color-primary) !important;
}
@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
    transition: unset !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not(:nth-child(1)):hover), ::slotted(button:not(:nth-child(1)):hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-frosted);
  padding: var(--p-spacing-static-xs);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}
@media(forced-colors:active) {
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "medium", isCompact: true, activeTabIndex: 0 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 2px var(--p-spacing-static-sm) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-md) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
  color: var(--p-color-canvas) !important;
}
::slotted(a:nth-child(1)[data-animating]), ::slotted(button:nth-child(1)[data-animating]) {
  transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color 0s linear var(--p-duration-md) !important;
}
::slotted(a:nth-child(1):not([data-animating])), ::slotted(button:nth-child(1):not([data-animating])) {
  background: var(--p-color-primary) !important;
}
@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
    transition: unset !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not(:nth-child(1)):hover), ::slotted(button:not(:nth-child(1)):hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-frosted);
  padding: var(--p-spacing-static-xs);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}
@media(forced-colors:active) {
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: frosted, size: "small", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
  color: var(--p-color-canvas) !important;
}
::slotted(a:nth-child(1)[data-animating]), ::slotted(button:nth-child(1)[data-animating]) {
  transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color 0s linear var(--p-duration-md) !important;
}
::slotted(a:nth-child(1):not([data-animating])), ::slotted(button:nth-child(1):not([data-animating])) {
  background: var(--p-color-primary) !important;
}
@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
    transition: unset !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not(:nth-child(1)):hover), ::slotted(button:not(:nth-child(1)):hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-frosted);
  padding: var(--p-spacing-static-xs);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}
@media(forced-colors:active) {
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for background: none, size: "small", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  background: var(--p-color-frosted) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
  color: var(--p-color-canvas) !important;
}
::slotted(a:nth-child(1)[data-animating]), ::slotted(button:nth-child(1)[data-animating]) {
  transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color 0s linear var(--p-duration-md) !important;
}
::slotted(a:nth-child(1):not([data-animating])), ::slotted(button:nth-child(1):not([data-animating])) {
  background: var(--p-color-primary) !important;
}
@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
    transition: unset !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not(:nth-child(1)):hover), ::slotted(button:not(:nth-child(1)):hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: none, size: "small", isCompact: false, activeTabIndex: 2 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  background: var(--p-color-frosted) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(3)), ::slotted(button:nth-child(3)) {
  color: var(--p-color-canvas) !important;
}
::slotted(a:nth-child(3)[data-animating]), ::slotted(button:nth-child(3)[data-animating]) {
  transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color 0s linear var(--p-duration-md) !important;
}
::slotted(a:nth-child(3):not([data-animating])), ::slotted(button:nth-child(3):not([data-animating])) {
  background: var(--p-color-primary) !important;
}
@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:nth-child(3)), ::slotted(button:nth-child(3)) {
    transition: unset !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not(:nth-child(3)):hover), ::slotted(button:not(:nth-child(3)):hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: none, size: "small", isCompact: false, activeTabIndex: undefined 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  background: var(--p-color-frosted) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:hover), ::slotted(button:hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: none, size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  background: var(--p-color-frosted) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
  color: var(--p-color-canvas) !important;
}
::slotted(a:nth-child(1)[data-animating]), ::slotted(button:nth-child(1)[data-animating]) {
  transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color 0s linear var(--p-duration-md) !important;
}
::slotted(a:nth-child(1):not([data-animating])), ::slotted(button:nth-child(1):not([data-animating])) {
  background: var(--p-color-primary) !important;
}
@media(min-width:480px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}

@media(min-width:760px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-sm) !important;
  }
}

@media(min-width:1000px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}

@media(min-width:1300px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-sm) !important;
  }
}

@media(min-width:1760px) {
  ::slotted(a), ::slotted(button) {
    font-size: var(--p-typescale-md) !important;
  }
}

@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
    transition: unset !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not(:nth-child(1)):hover), ::slotted(button:not(:nth-child(1)):hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for background: surface, size: "small", isCompact: false, activeTabIndex: 0 1`] = `
":host {
  display: grid;
  position: relative !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  padding: 12px var(--p-spacing-static-md) !important;
  white-space: nowrap !important;
  cursor: pointer !important;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full)) !important;
  font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  font-size: var(--p-typescale-sm) !important;
  color: var(--p-color-primary) !important;
}
::slotted(a:focus-visible), ::slotted(button:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
  color: var(--p-color-canvas) !important;
}
::slotted(a:nth-child(1)[data-animating]), ::slotted(button:nth-child(1)[data-animating]) {
  transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color 0s linear var(--p-duration-md) !important;
}
::slotted(a:nth-child(1):not([data-animating])), ::slotted(button:nth-child(1):not([data-animating])) {
  background: var(--p-color-primary) !important;
}
@media(forced-colors:active) {
  ::slotted(a), ::slotted(button) {
    forced-color-adjust: none !important;
    background: Canvas !important;
  }
  ::slotted(a) {
    color: LinkText !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(button) {
    color: ButtonText !important;
    box-shadow: inset 0 0 0 2px ButtonBorder !important;
  }
  ::slotted(a:nth-child(1)), ::slotted(button:nth-child(1)) {
    transition: unset !important;
  }
  ::slotted(a:focus-visible), ::slotted(button:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:not(:nth-child(1)):hover), ::slotted(button:not(:nth-child(1)):hover) {
    transition: color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out), background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out) !important;
    background: var(--p-color-frosted-strong) !important;
  }
}

.scroller {
  place-self: flex-start;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-surface);
  padding: var(--p-spacing-static-xs);
}
.bar {
  position: absolute;
  inset-inline-start: 0;
  width: 0px;
  height: 100%;
  z-index: -1;
  pointer-events: none;
  border-radius: var(--_p-legacy-radius-small,var(--p-radius-full));
  background: var(--p-color-primary);
}
@media(forced-colors:active) {
  .scroller {
    forced-color-adjust: none;
    outline: 1px solid CanvasText;
  }
}
"
`;
